log
Fri 10 May 2024 09:14:00 PM UTC: 
 tests:  1|8
total_score: 0/70
5208219
Fri 10 May 2024 09:17:12 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
0ed58f6
Fri 10 May 2024 09:42:57 PM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:31: error: expected ‘;’ before ‘Datos’
   53 |     Datos->pair->value = value
      |                               ^
      |                               ;
   54 |     Datos->left = NULL;
      |     ~~~~~                      
treemap.c:64:15: error: ‘True’ undeclared (first use in this function)
   64 |         while(True)
      |               ^~~~
treemap.c:64:15: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:76:17: error: expected expression before ‘}’ token
   76 |                 }
      |                 ^
Compilation failed
820dfce
Fri 10 May 2024 09:44:36 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:2:10: fatal error: bool.h: No such file or directory
    2 | #include <bool.h>
      |          ^~~~~~~~
compilation terminated.
Compilation failed
e75b0a1
Fri 10 May 2024 09:45:58 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:65:15: error: ‘True’ undeclared (first use in this function); did you mean ‘true’?
   65 |         while(True)
      |               ^~~~
      |               true
treemap.c:65:15: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:77:17: error: expected expression before ‘}’ token
   77 |                 }
      |                 ^
Compilation failed
f201de1
Fri 10 May 2024 09:46:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:77:17: error: expected expression before ‘}’ token
   77 |                 }
      |                 ^
Compilation failed
73fab00
